--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -34,7 +34,12 @@ CFILES = ft_isalpha.c\
 	 ft_putchar_fd.c\
 	 ft_putstr_fd.c\
 	 ft_putendl_fd.c\
-	 ft_putnbr_fd.c
+	 ft_putnbr_fd.c\
+	 printf/ft_manage.c\
+	 printf/ft_printf.c\
+	 printf/ft_putchar_fdd.c\
+	 printf/ft_putnbr_fdd.c\
+	 printf/ft_putstr_fdd.c
 
 BONUS = ft_lstnew_bonus.c\
 	ft_lstadd_front_bonus.c\
